fix sidebar overlapping on mobile (#213)

--- a/configs/custom.css
+++ b/configs/custom.css
@@ -142,3 +142,7 @@ article p img {
     font-size: 15px;
     margin-top: 10px;
 }
+
+.navBreadcrumb {
+    z-index: 1;
+}
